--- a/ios-chatting-app/ios-chatting-app/Base.lproj/Main.storyboard
+++ b/ios-chatting-app/ios-chatting-app/Base.lproj/Main.storyboard
@@ -373,6 +373,21 @@
             </objects>
             <point key="canvasLocation" x="3444.9275362318845" y="-280.58035714285711"/>
         </scene>
+        <!--Messages View Controller-->
+        <scene sceneID="r3e-1L-Xuh">
+            <objects>
+                <viewController id="o0i-8B-zUR" customClass="JSQMessagesViewController" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="Pug-tv-s0S">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <viewLayoutGuide key="safeArea" id="6zK-GF-H5W"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="4re-b1-cVI" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="4299" y="-281"/>
+        </scene>
         <!--Users Table View Controller-->
         <scene sceneID="26K-o9-BME">
             <objects>
@@ -453,7 +468,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="VRL-5p-P15" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="4422" y="-281"/>
+            <point key="canvasLocation" x="5064" y="-281"/>
         </scene>
         <!--Profile View Table View Controller-->
         <scene sceneID="ovv-Pt-CXC">
@@ -599,7 +614,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="5i9-SC-uqt" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="5195.652173913044" y="-281.25"/>
+            <point key="canvasLocation" x="5786" y="-281"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="ICM-BY-NyP">
